<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/lyt_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#003153"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_schedule"
    android:textColor="#FFF"
    android:textSize="25sp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="40dp"
    />

<Button
    android:id="@+id/button_back"
    android:background="@drawable/back_button"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="20dp"
    android:onClick="onBack"
    android:text="@string/txt_back"
    android:textSize="25sp" />

</RelativeLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:text="@string/events"
    android:textColor="#FFF"
    android:textSize="25sp" />



<ListView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/bg_calender"
    />

<android.support.v7.widget.AppCompatButton
    android:id="@+id/btn_calender"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/bg_buttons"
    android:onClick="launchCalender"
    android:text="@string/calendar"
    android:textSize="18sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_buttons"
        android:onClick="launchNotifications"
        android:text="@string/notifications"
        android:textSize="18sp" />

</LinearLayout>

</ScrollView>

