<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003153"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textColor="#FFF"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:gravity="start"
            />

        <Button
            android:id="@+id/button_back"
            android:background="@drawable/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:onClick="onBack"
            android:text="@string/txt_back"
            android:textSize="25sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/events_for_tomorrow"
        android:textColor="#FFF"
        android:textSize="25sp" />



    <ListView
        android:id="@+id/notification_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_calender"
        />


</LinearLayout>