<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003153"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#003153"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/txt_new_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:background="@drawable/bg_calender"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:inputType="text"
            android:autofillHints="" tools:targetApi="o"
            android:labelFor="@android:id/accessibilityActionContextClick"/>

        <EditText
            android:id="@+id/txt_new_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="@drawable/bg_calender"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:inputType="text"
            android:autofillHints="" tools:targetApi="o"
            android:labelFor="@android:id/accessibilityActionContextClick"/>

        <EditText
            android:id="@+id/txt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@drawable/bg_calender"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:autofillHints="" tools:targetApi="o"
            android:labelFor="@android:id/accessibilityActionContextClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_buttons"
            android:onClick="onButtonClick"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_buttons"
            android:onClick="onCancel"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="20sp"
            />


    </LinearLayout>

</LinearLayout>
