<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003153"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        />

        <Button
            android:id="@+id/button_back"
            android:background="@drawable/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:onClick="onBack"
            android:text="@string/txt_back"
            android:textSize="25sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <CalendarView
            android:id="@+id/calendar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_calender"
            >

        </CalendarView>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        />

    <ListView
        android:id="@+id/calender_scroll"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_calender"
        />

    </LinearLayout>

</ScrollView>